[package]
name = "remote"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.29"
tokio = { version = "1.35.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
fs_extra = "1.3.0"
xcap = "0.5.0"
futures = "0.3.31"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
device_query = "=0.1.3"